Removed the line height to prevent text descenders being cut off in selects/dropdowns (#24731).

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -6537,7 +6537,6 @@ table.bar_chart {
 
 	select,
 	input {
-		line-height: 1;
 		height: 32px;
 	}
 
